# Rust_Practice

./: Cargo.toml  robot_test.rs
lets_get_rusty/control_flow/src/: main.rs
lets_get_rusty/data_types/src/: main.rs
lets_get_rusty/error_handling/src/: main.rs
lets_get_rusty/functions/src/: main.rs
lets_get_rusty/guessing_game/: Cargo.toml  projects.code-workspace
lets_get_rusty/guessing_game/src/: main.rs
lets_get_rusty/hello_world/: main
lets_get_rusty/robot_practice/: Cargo.toml
lets_get_rusty/robot_practice/src/: main.rs
lets_get_rusty/variables/src/: main.rs
rust_book/hello_rust/: Cargo.toml  main
rust_book/rectangles/src/: main.rs
text_processor/src/: main.rs
